🐛 Fix the bug that create a invisible overlay that stop the user's click on the page

--- a/src/app/pages/home/intro-section/intro-section.component.scss
+++ b/src/app/pages/home/intro-section/intro-section.component.scss
@@ -1,5 +1,4 @@
 #intro-section {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
