--- a/src/app/shared/mobile-menu/mobile-menu.component.scss
+++ b/src/app/shared/mobile-menu/mobile-menu.component.scss
@@ -4,7 +4,6 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 0;
   background-color: transparent;
 
   .mobileMenu-sidenav {
