--- a/src/app/shared/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/nav-bar/nav-bar.component.scss
@@ -6,7 +6,6 @@ $text-color: #09122c;
   display: flex;
   align-items: center;
   box-shadow: 0 0 0.1em;
-  z-index: 10;
 
   #navBar-container {
     display: flex;
@@ -80,7 +79,6 @@ $text-color: #09122c;
   width: 100%;
   height: 100%;
   background-color: #09122c;
-  z-index: 0;
 }
 .expandMatMenu {
   width: 140px;
